--- a/joon/main.css
+++ b/joon/main.css
@@ -3,7 +3,6 @@ body, html {
 	text-align: center;
 	margin: 0;
 	width: 100%;
-
 }
 
 li {
@@ -15,6 +14,24 @@ li {
 .container {
 	font-size: 20px;
 }
+#intro {
+  width: 100%;
+  height: 100%;
+  display: block;
+  align-items: center;
+  justify-content: center;
+}
+
+#intro h3 {
+  padding-top: 25%;
+}
+#intro h1 {
+  padding-bottom: 4%;
+}
+
+#intro p{
+  font-size: 25px;
+}
 
 .intro {
 	font-size: 60px;
@@ -25,7 +42,7 @@ li {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	padding: 300px 0;
+  padding: 10px;
 }
 .intro h1 {
 	font-size: 90px;
@@ -53,6 +70,7 @@ li {
 .contactme {
   background: linear-gradient(#e1e1e1, white) !important;
   margin: 0px 0px 0px 0px !important;
+  padding-top: 20px !important;
 }
 .jumbotron h1{
 	text-align: center;
@@ -257,5 +275,6 @@ li {
 }
 
 .skills {
-  background-color: #e1e1e1;
+  background-color: #d6d6d6;
+  padding-top: 15px;
 }
