--- a/joon/main.css
+++ b/joon/main.css
@@ -88,7 +88,7 @@ li {
 .dicon {
 	padding: 20px;	
   
-  filter: grayscale(35%);
+  filter: grayscale(45%);
 
 }
 
@@ -153,7 +153,7 @@ li {
   position: absolute;
   right: 0;
   top: 0;
-  transition: opacity 0.25s;
+  transition: 0.5s ease;
   z-index: 1;
 
 }
@@ -181,7 +181,7 @@ li {
   position: absolute;
   right: 0;
   top: 0;
-  transition: opacity 0.25s;
+  transition: 0.5s ease;
   z-index: 1;
 
 }
@@ -210,7 +210,7 @@ li {
   position: absolute;
   right: 0;
   top: 0;
-  transition: opacity 0.25s;
+  transition: 0.5s ease;
   z-index: 1;
 }
 
@@ -236,7 +236,7 @@ li {
   position: absolute;
   right: 0;
   top: 0;
-  transition: opacity 0.25s;
+  transition: 0.5s ease;
   z-index: 1;
 }
 
