--- a/joon/main.css
+++ b/joon/main.css
@@ -87,14 +87,21 @@ body, html {
 
 .dicon {
 	padding: 20px;	
-  
   filter: grayscale(45%);
-
 }
 
 .dicon:hover {
-  
   filter: grayscale(0%);
+}
+
+.vicon {
+  padding: 20px;  
+  filter: opacity(75%);
+  cursor: pointer;
+}
+
+.vicon:hover {
+  filter: opacity(100%);
 }
 
 #heading {
@@ -299,4 +306,65 @@ body, html {
 .skills {
   background-color: #e1e1e1;
   padding-top: 15px;
+}
+
+.volunteer {
+  background-color: #e1e1e1;
+  padding-top: 15px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    text-align: right;
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    padding-top: 10px;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3)
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.img-responsive {
+  width: 100%;
+}
+
+.modal-p {
+  text-align: left;
+  font-size: 15px;
+  padding-top: 10px;
+}
+
+.modal-content a {
+  text-align: left;
 }
