--- a/joon/main.css
+++ b/joon/main.css
@@ -14,19 +14,12 @@ body, html {
 .container {
 	font-size: 20px;
 }
-#intro {
-  width: 100%;
-  height: 100%;
-  display: block;
-  align-items: center;
-  justify-content: center;
-}
 
-#intro h3 {
-  padding-top: 22%;
-}
 #intro h1 {
+  font-family: 'EB Garamond', serif;
+  padding-top: 24%;
   padding-bottom: 4%;
+  font-size: 90px;
 }
 
 #intro p{
@@ -34,6 +27,11 @@ body, html {
 }
 
 .intro {
+  width: 100%;
+  height: 100%;
+  display: block;
+  align-items: center;
+  justify-content: center;
 	font-size: 60px;
 	font-family: Helvetica, sans-serif;
 	color: white;
@@ -44,13 +42,6 @@ body, html {
 	background-size: cover;
   padding: 10px;
 }
-.intro h1 {
-	font-size: 90px;
-}
-.intro h3 {
-	font-style: italic;
-	font-size: 40px;
-}
 
 .worklogo {
   padding-top: 15px;
@@ -58,7 +49,6 @@ body, html {
   -webkit-border-radius: 25%;
   -moz-border-radius: 25%;
   border-radius: 15%;
-  
 }
 
 #njitlogo {
@@ -369,9 +359,7 @@ body, html {
   text-align: left;
 }
 
-.modal-content h5 {
-  text-align: left;
-  font-weight: bold;
-  font-size: 15px;
-}
 
+.workdescription {
+  font-family: 'Quattrocento Sans', sans-serif;
+}
