--- a/joon/main.css
+++ b/joon/main.css
@@ -15,34 +15,24 @@ body, html {
 	font-size: 20px;
 }
 
-@media (min-width: 1024px){
-  #intro h1 {
-    font-family: 'EB Garamond', serif;
-    padding-top: 24%;
-    padding-bottom: 4%;
-    font-size: 90px;
-  }
+#intro {
+  display: table;
+  font-family: 'EB Garamond', serif;
+}
+.introBlock {
+  display: table-cell;
+  text-align: center;
+  margin: auto;
+  vertical-align: middle;
+  padding-top: 15%;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  #intro h1 {
-    font-family: 'EB Garamond', serif;
-    padding-top: 70%;
-    padding-bottom: 3%;
-    font-size: 90px;
-  }
+#intro h1 {
+  font-size: 2.5em;
+  padding-bottom: 40px;
 }
-@media (max-width: 768px){
-  #intro h1 {
-    font-family: 'EB Garamond', serif;
-    padding-top: 70%;
-    padding-bottom: 3%;
-    font-size: 90px;
-  }
-}
-
-#intro p{
-  font-size: 25px;
+#intro p {
+  font-size: 0.5em;
 }
 
 .intro {
@@ -52,17 +42,15 @@ body, html {
   align-items: center;
   justify-content: center;
 	font-size: 60px;
-	font-family: Helvetica, sans-serif;
 	color: white;
 	background-image: 
 		url("./picture/DSC_7661.JPG");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-  padding: 10px;
 }
 
-@media (min-width: 480px){
+@media (min-width: 767px){
   .worklogo {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -72,7 +60,7 @@ body, html {
   }
 }
 
-@media (max-width: 480px){
+@media (max-width: 767px){
   .worklogo {
     padding-top: 15px;
     padding-bottom: 15px;
