reduced background img size

--- a/joon/main.css
+++ b/joon/main.css
@@ -44,7 +44,7 @@ body, html {
 	font-size: 60px;
 	color: white;
 	background-image: 
-		url("./picture/DSC_7661.JPG");
+		url("./picture/DSC_7661-min.JPG");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
